# tricubic

./: .gitignore  LICENSE  README.md  compare.ipynb  pyproject.toml  test.py  tricubic.py
notebooks/: compare.ipynb
src/tricubic/: __init__.py  binv.npy  tricubic.py
tests/: __init__.py  context.py  test.py  test_tricubic.py
tricubic/: __init__.py  tricubic.py
