[project]
name = "tricubic"
version = "0.1.0"
description = "Python implementation of a tricubic interpolator in three dimensions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
]
license = {file = "LICENSE.md"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tricubic"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "I",
]
